--- a/style.css
+++ b/style.css
@@ -15,3 +15,13 @@ body {
   background-color: aqua;
   text-align: center;
 }
+
+button {
+  background-color: rgb(255, 229, 80);
+  width: 130px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  margin: 20px;
+  font-size: 1rem;
+}
